--- a/codeCertif/css/SousCategorieAutre.css
+++ b/codeCertif/css/SousCategorieAutre.css
@@ -1,62 +1,5 @@
 
-/* header */
-
-body{
-    margin: 0%;
-    padding: 0%;
-    font-family: 'JetBrains Mono';
-    font-style: normal;
-    font-weight: 400;
-}
-
-.headerTop{
-    width: 100%;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-evenly;
-   flex-wrap: nowrap;  
-}
-
-#logo{
-    margin: 10px 20px 10px 550px;
-    width: 126px;
-    height: 118px;
-    /* border: 1px solid black; */
-}
-#panier{
-    width: 168px;
-    height: 103.92px;
-    margin: 15px 0px 10px 400px;
-}
-#trait{
-    width: 100%;
-  }  
-    
-.navBar{
-    /* display: inline; */
-    text-decoration: none;
-}
-ul{
-    list-style: none;   
-    
-}
-li{
-    display: inline;
-    margin-left: 120px;
-    font-size: 24px;
-    line-height: 32px;
-    color: black;
-    
-}
-li a {
-    text-decoration: none;
-    color: black;
-}
-#banner{
-    margin: 20px 150px;
-}
-
-/* main */
+/* ici commence le main */
 main{
     display: flex;
     flex-direction: column;
@@ -186,31 +129,6 @@ font-size: 24px;
 line-height: 41px;
 color: #FFFFFF;
 }
-main #trait{
+#trait2{
     margin-top: 80px;
-    
 }
-footer{
-    width: 100%;
-   display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.footerList1{
-    display: flex;
-    flex-direction: column;   
-}
-.footerList2{
-    display: flex;
-    flex-direction: column;   
-}
-.reseaux{
-    display: flex;
-    flex-direction: row;   
-}
-.reseaux img{
-    width: 55px;
-    height: 55px;
-    margin-top: 100px;
-    padding: 10px;
-    }
