--- a/codeCertif/css/categorieAutre.css
+++ b/codeCertif/css/categorieAutre.css
@@ -1,190 +1,26 @@
 
-/* header ------------------------------- */
-
-body{
-    margin: 0%;
-    padding: 0%;
-    font-family: 'JetBrains Mono';
-    font-style: normal;
-    font-weight: 400;
-}
-main{
-    height: 60%;
-}
-.headerTop{
-    width: 100%;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-evenly;
-   flex-wrap: nowrap;  
-}
-
-#logo{
-    margin: 10px 20px 10px 550px;
-    width: 126px;
-    height: 118px;
-   
-}
-#rondPanier{
-    box-sizing: border-box;
-
-    position: absolute;
-    width: 37px;
-    height: 37px;
-    left: 1430px;
-    top: 15px;
-    
-    background: #FFFFFF;
-    border: 1px solid #000000;
-    border-radius: 50%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-}
-#price{
-    position: absolute;
-    width: 68px;
-    height: 21px;
-    left: 1466px;
-    top: 65px;
-    
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 21px;
-    color: #000000;   
-}
-   
-#total{
-    position: absolute;
-    width: 72px;
-    height: 32px;
-    left: 1464px;
-    top: 15px;
-    
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    color: #000000;
-}
-    
-   
-
-
-#panier{
-    width: 168px;
-    height: 103.92px;
-    margin: 15px 10px 10px 400px;
-}
-#trait{
-    width: 100%;
-  }  
-    
-.navBar{
-   
-    text-decoration: none;
-}
-ul{
-    list-style: none;   
-    
-}
-.menuList-unstyled li{
-    display: inline;
-    margin-left: 170px;
-    padding-bottom: 100px;
-    font-size: 24px;
-    line-height: 32px;
-    color: black;
-    
-}
-li a {
-    text-decoration: none;
-    color: black;
-}
-#banner{
-    margin: 20px 150px;
-}
-
-/* main--------------------------------- */
-main{
-    display: flex;
-    flex-direction: column;
-}
-
-    /* Style the list */
-    .chemins {
-        /* padding: 20px 16px; */
-        margin-top: 100px;
-        list-style: none;
-        background-color: #ffffff;
-      }
-      
-      /* Display list items side by side */
-      ul.chemins  li {
-        display: inline;
-        font-size: 22px;
-      }
-      
-      /* Add a slash symbol (/) before/behind each list item */
-      ul.chemins  li+li:before {
-        padding: 0px;
-        color: rgb(253, 253, 253);
-        content: "/\00a0";
-      }
-      
-      /* Add a color to all links inside the list */
-      ul.chemins  li a {
-        color: #18c309;
-        text-decoration: none;
-      }
-      
-      /* Add a color on mouse-over */
-      ul.chemins  li a:hover {
-        color: #030303;
-        text-decoration: underline;
-      }
-
-.titre{
-    display: flex;
-   text-align: center;
-}
+/* main commence ici */
 .marqueAutres{
-    
     height: 320px;
     background-color: #D9D9D9;
     background: #D9D9D9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);     
-    margin: 0px 20px 100px 20px ;
+    margin: 70px 20px 100px 20px ;
+    display: flex;
   }
 .marqueAutres img{
-    width: 280px;
-    height: 149.33px;
-    margin: 50px 500px 0px 610px;
+ width: 350px;
+ height: 297px;
+ margin-left: 300px;
   }
-
-h1{
-    text-align: center; 
-    margin-top: 60px 0px 60px 0px; 
-    text-decoration-line: underline;
-    font-family: 'JetBrains Mono';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 42px;
-    font-style: oblique;
-    color: #48DA15;
-    -webkit-text-stroke:black ;
-    
-   
-}
 .carre{
     
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
-    /* margin :100px 20px 100px 320px; */
-    margin: 50px 10px 200px 0px;
+   
+    margin: 50px 10px 50px 0px;
 }
 #carre1{
 
@@ -203,9 +39,9 @@ h1{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    
 }
 #carre1 img{
-    width: 280px;
-    height: 149.33px;
-    margin: 60px 10px;
+    width: 60%;
+    height: auto;
+    margin: 25px 0px 0px 60px ;
 }
 #carre2:hover{
 
@@ -224,38 +60,18 @@ h1{
 }
 
 #carre2 img{
-    width: 225px;
-    height: 225px;
-    margin: 10px 20px 10px 30px;
+    width: 60%;
+    height: auto;
+    margin: 25px 0px 0px 60px ;
+}
+#imgTShirt{
+    width: 350px;
+    height: 350px;
+}
+#imgCasquette{
+    width: 250px;
+    height: 212px;
 }
 
 
-main #trait{
-    margin-top: 80px;
-    
-}
-/* footer------------------------ */
-footer{
-    width: 100%;
-   display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.footerList1{
-    display: flex;
-    flex-direction: column;   
-}
-.footerList2{
-    display: flex;
-    flex-direction: column;   
-}
-.reseaux{
-    display: flex;
-    flex-direction: row;   
-}
-.reseaux img{
-    width: 55px;
-    height: 55px;
-    margin-top: 100px;
-    padding: 10px;
-    }
+
