--- a/codeCertif/css/categorieSneakers.css
+++ b/codeCertif/css/categorieSneakers.css
@@ -1,171 +1,7 @@
 
-/* header ------------------------------- */
+/* ici commence le main */
 
-body{
-    margin: 0%;
-    padding: 0%;
-    font-family: 'JetBrains Mono';
-    font-style: normal;
-    font-weight: 400;
-}
-main{
-    height: 60%;
-}
-.headerTop{
-    width: 100%;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-evenly;
-   flex-wrap: nowrap;  
-}
-
-#logo{
-    margin: 10px 20px 10px 550px;
-    width: 126px;
-    height: 118px;
-   
-}
-#rondPanier{
-    box-sizing: border-box;
-
-    position: absolute;
-    width: 37px;
-    height: 37px;
-    left: 1430px;
-    top: 15px;
-    
-    background: #FFFFFF;
-    border: 1px solid #000000;
-    border-radius: 50%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-}
-#price{
-    position: absolute;
-    width: 68px;
-    height: 21px;
-    left: 1466px;
-    top: 65px;
-    
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 21px;
-    color: #000000;   
-}
-   
-#total{
-    position: absolute;
-    width: 72px;
-    height: 32px;
-    left: 1464px;
-    top: 15px;
-    
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    color: #000000;
-}
-    
-   
-
-
-#panier{
-    width: 168px;
-    height: 103.92px;
-    margin: 15px 10px 10px 400px;
-}
-#trait{
-    width: 100%;
-  }  
-    
-.navBar{
-   
-    text-decoration: none;
-}
-ul{
-    list-style: none;   
-    
-}
-.menuList-unstyled li{
-    display: inline;
-    margin-left: 170px;
-    padding-bottom: 100px;
-    font-size: 24px;
-    line-height: 32px;
-    color: black;
-    
-}
-li a {
-    text-decoration: none;
-    color: black;
-}
-#banner{
-    margin: 20px 150px;
-}
-
-/* main--------------------------------- */
-main{
-    display: flex;
-    flex-direction: column;
-}
-
-    /* Style the list */
-.chemins {
-    /* padding: 20px 16px; */
-    margin-top: 100px;
-    list-style: none;
-    background-color: #ffffff;
-  }
-  
-  /* Display list items side by side */
-  ul.chemins  li {
-    display: inline;
-    font-size: 22px;
-  }
-  
-  /* Add a slash symbol (/) before/behind each list item */
-  ul.chemins  li+li:before {
-    padding: 0px;
-    color: rgb(253, 253, 253);
-    content: "/\00a0";
-  }
-  
-  /* Add a color to all links inside the list */
-  ul.chemins  li a {
-    color: #18c309;
-    text-decoration: none;
-  }
-  
-  /* Add a color on mouse-over */
-  ul.chemins  li a:hover {
-    color: #ffffff;
-    text-decoration: underline;
-  }
-
-.titre{
-    display: flex;
-   text-align: center;
-}
-
-h1{
-    text-align: center; 
-    margin-top: 60px 0px 60px 0px; 
-    text-decoration-line: underline;
-    font-family: 'JetBrains Mono';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 42px;
-    font-style: oblique;
-    color: #48DA15;
-    -webkit-text-stroke:black ;
-    
-   
-}
 .carre{
-    
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -255,34 +91,7 @@ h1{
     height: 113px;
     margin:80px 40px  40px 40px ;   
 }
-
-
 main #trait{
     margin-top: 80px;
     
 }
-/* footer------------------------ */
-footer{
-    width: 100%;
-   display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.footerList1{
-    display: flex;
-    flex-direction: column;   
-}
-.footerList2{
-    display: flex;
-    flex-direction: column;   
-}
-.reseaux{
-    display: flex;
-    flex-direction: row;   
-}
-.reseaux img{
-    width: 55px;
-    height: 55px;
-    margin-top: 100px;
-    padding: 10px;
-    }
