--- a/codeCertif/css/contact.css
+++ b/codeCertif/css/contact.css
@@ -11,24 +11,24 @@ form{
     flex-direction: column; 
     margin:10% 25%; 
 }
-label{
-    margin-top:15px;
-}
-input {
-    width: 50%;
-    height: 30px;
-    filter: drop-shadow(3px 2px #1313127d);
-    border-color: 3px solid black;
-    border-radius: 10px; 
-  
-}
+
 textarea{
-    
     width: 70%;
     height: 90px;
     filter: drop-shadow(3px 2px #1313127d);
-    border-color: 3px solid black;
-    border-radius: 10px; 
-  
-      
+    border-color: 3px solid black; 
+    margin-bottom: 30px;  
+}
+/* button{
+    margin-top: 15px;
+    width: 120px;
+    border-radius: 5px;
+   background-color:white;
+} */
+button{
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color:white;
+    width: 154px;
+    height: 47px;
 }
