--- a/codeCertif/css/modele.css
+++ b/codeCertif/css/modele.css
@@ -183,6 +183,22 @@ footer ul {
 main #trait{
     margin-top: 100px;    
 }
+input {
+    width: 452px;
+    height: 50px;
+    background: #D9D9D9;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+label{
+    margin-top:15px;
+    width: 250px;
+    height: 32px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: #000000;
+}
 
     @media screen and (min-width: 320px) and (max-width: 480px) {
       
